register and login

--- a/WebAPI/FomoGym/appsettings.json
+++ b/WebAPI/FomoGym/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=FomoGym.db"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:5085",
+    "Audience": "http://localhost:5085",
+    "SigningKey": "IsAk-TaNgIs-GaDiS-yAtIm-9d6035356e0175ac16902127370651b20f7dfa2c-836552ffd6bfc848d41c5f34bc27623b-9ed395a1ea8f6d0320a8b9a0862934b23551fe6b-3152b3ea97e57ab112e0c970f7005cc1"
   }
 }
